# betcode

./: .cursorrules  .gitignore  .gitmodules  .jscpd.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  THIRD-PARTY-LICENSES.md  clippy.toml  deny.toml  justfile  release-plz.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude.yml  lint.yml  release-plz.yml  release.yml
.serena/: project.yml
crates/betcode-cli/: Cargo.toml  README.md
crates/betcode-cli/src/: auth_cmd.rs  config.rs  connection.rs  daemon_cmd.rs  gitlab_cmd.rs  gitlab_fmt.rs  headless.rs  lib.rs  machine_cmd.rs  main.rs  relay.rs  repo_cmd.rs  session_cmd.rs  subagent_cmd.rs  worktree_cmd.rs
crates/betcode-cli/src/app/: mod.rs  state.rs
crates/betcode-cli/src/commands/: cache.rs  mod.rs  plugin_cmd.rs  service.rs
crates/betcode-cli/src/completion/: controller.rs  ghost.rs  mod.rs  popup.rs
crates/betcode-cli/src/tui/: fingerprint_panel.rs  input.rs  mod.rs  permission_input.rs  permission_tests.rs  question_input.rs  question_tests.rs
crates/betcode-cli/src/ui/: detail_panel.rs  mod.rs  panels.rs  render.rs  render_tests.rs  status_panel.rs
crates/betcode-core/: Cargo.toml  README.md
crates/betcode-core/src/: config.rs  db.rs  error.rs  lib.rs  metrics.rs  permissions.rs  tracing_init.rs
crates/betcode-core/src/commands/: builtin.rs  discovery.rs  matcher.rs  mcp.rs  mod.rs  plugins.rs
crates/betcode-core/src/ndjson/: mod.rs  parser.rs  types.rs
crates/betcode-crypto/: Cargo.toml  README.md
crates/betcode-crypto/src/: certs.rs  error.rs  exchange.rs  fingerprint_store.rs  fingerprint_visual.rs  identity.rs  lib.rs  session.rs
crates/betcode-daemon/: Cargo.toml  README.md
crates/betcode-daemon/migrations/: 20260203000000_initial.sql  20260213000000_git_repos.sql  20260213100000_session_name.sql  20260216000000_subagents.sql
crates/betcode-daemon/src/: lib.rs  main.rs
crates/betcode-daemon/src/commands/: cc_discovery.rs  mod.rs  service_executor.rs
crates/betcode-daemon/src/completion/: agent_lister.rs  file_index.rs  mod.rs
crates/betcode-daemon/src/gitlab/: client.rs  mod.rs  tests.rs  types.rs
crates/betcode-daemon/src/orchestration/: manager.rs  mod.rs  pool.rs  scheduler.rs
crates/betcode-daemon/src/permission/: engine.rs  mod.rs  pending.rs  types.rs
crates/betcode-daemon/src/plugin/: client.rs  config.rs  manager.rs  mod.rs
crates/betcode-daemon/src/relay/: mod.rs  pipeline.rs  types.rs
crates/betcode-daemon/src/server/: agent.rs  command_svc.rs  config.rs  config_svc.rs  gitlab_convert.rs  gitlab_svc.rs  gitlab_svc_tests.rs  handler.rs  health.rs  mod.rs  repo_svc.rs  subagent_svc.rs  version_svc.rs  worktree_svc.rs
crates/betcode-daemon/src/session/: mod.rs  multiplexer.rs  state.rs  types.rs
crates/betcode-daemon/src/storage/: db.rs  mod.rs  models.rs  queries.rs  queries_subagents.rs  repo_queries.rs
crates/betcode-daemon/src/subprocess/: bridge.rs  manager.rs  mod.rs
crates/betcode-daemon/src/tunnel/: cert_rotation.rs  client.rs  config.rs  error.rs  handler.rs  handler_tests.rs  heartbeat.rs  mod.rs
crates/betcode-daemon/src/worktree/: manager.rs  mod.rs  repo.rs
crates/betcode-daemon/tests/: command_integration.rs  permission_integration.rs  relay_integration.rs
crates/betcode-proto/: Cargo.toml  README.md  build.rs
crates/betcode-proto/src/: lib.rs  methods.rs
crates/betcode-relay/: Cargo.toml  README.md
crates/betcode-relay/migrations/: 20260204000001_relay_initial.sql  20260209000001_machine_identity_pubkey.sql  20260215000001_token_rotation_grace.sql  20260216000001_device_tokens.sql
crates/betcode-relay/src/: lib.rs  main.rs
crates/betcode-relay/src/auth/: claims.rs  jwt.rs  mod.rs  password.rs
crates/betcode-relay/src/buffer/: manager.rs  mod.rs
crates/betcode-relay/src/notifications/: fcm.rs  mod.rs  service.rs
crates/betcode-relay/src/registry/: connection.rs  mod.rs
crates/betcode-relay/src/router/: forwarder.rs  mod.rs
crates/betcode-relay/src/server/: agent_proxy.rs  agent_proxy_tests.rs  auth_svc.rs  auth_svc_tests.rs  command_proxy.rs  command_proxy_tests.rs  config_proxy.rs  config_proxy_tests.rs  git_repo_proxy.rs  git_repo_proxy_tests.rs  gitlab_proxy.rs  gitlab_proxy_tests.rs  grpc_util.rs  health.rs  interceptor.rs  machine_svc.rs  mod.rs  subagent_proxy.rs  test_helpers.rs  tunnel_svc.rs  tunnel_svc_tests.rs  worktree_proxy.rs  worktree_proxy_tests.rs
crates/betcode-relay/src/storage/: db.rs  mod.rs  models.rs  queries.rs  queries_buffer.rs  queries_certs.rs  queries_notifications.rs  tests.rs
crates/betcode-relay/src/tls/: certs.rs  config.rs  mod.rs
crates/betcode-releases/: Cargo.toml  README.md
crates/betcode-releases/src/: lib.rs  main.rs  platform.rs  registry.rs  routes.rs
crates/betcode-releases/src/scripts/: install.ps1  install.sh
crates/betcode-releases/tests/: integration.rs
crates/betcode-setup/: Cargo.toml  README.md
crates/betcode-setup/src/: cert_provisioning.rs  cmd.rs  config.rs  escalate.rs  lib.rs  main.rs  os.rs  prompt.rs
crates/betcode-setup/src/cli/: mod.rs  wizard.rs
crates/betcode-setup/src/daemon/: mod.rs  systemd.rs  templates.rs
crates/betcode-setup/src/relay/: docker.rs  mod.rs  systemd.rs  templates.rs  validate.rs
crates/betcode-setup/src/releases/: caddy.rs  mod.rs  systemd.rs  templates.rs  validate.rs
docs/: IMPLEMENTATION_WORKFLOW.md  WORKFLOW_DETAILS.md
docs/architecture/: ARCHITECTURE_DECISIONS.md  CAPACITY_PLANNING.md  CLIENTS.md  COMPATIBILITY.md  CONFIG_CLIENTS.md  CONFIG_DAEMON.md  CONFIG_ENV_VARS.md  CONFIG_EXAMPLES.md  CONFIG_REFERENCE.md  CONFIG_RELAY.md  CONFIG_VALIDATION.md  DAEMON.md  DIAGRAM_GUIDE.md  FAILURE_CIRCUITS.md  FAILURE_MODES.md  FAILURE_NDJSON.md  FAILURE_OBSERVABILITY.md  FAILURE_PERMISSIONS.md  FAILURE_RATELIMIT.md  FAILURE_RECOVERY_STATES.md  FAILURE_SQLITE.md  GLOSSARY.md  NON_FUNCTIONAL.md  OVERVIEW.md  PROTOCOL.md  PROTOCOL_BRIDGE.md  PROTOCOL_L1.md  (+8 more)
(+24 files in other folders)
