[workspace]
resolver = "2"
members = [
    "crates/betcode-proto",
    "crates/betcode-core",
    "crates/betcode-daemon",
    "crates/betcode-cli",
    "crates/betcode-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Konstantin Sazhenov <me@sakost.dev>"]
license = "Apache-2.0"
repository = "https://github.com/betcode/betcode"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# Internal crates
betcode-proto = { path = "crates/betcode-proto" }
betcode-core = { path = "crates/betcode-core" }
