[workspace]
resolver = "3"
members = [
  "crates/betcode-proto",
  "crates/betcode-core",
  "crates/betcode-crypto",
  "crates/betcode-daemon",
  "crates/betcode-cli",
  "crates/betcode-relay",
  "crates/betcode-setup",
  "crates/betcode-releases",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Konstantin Sazhenov <me@sakost.dev>"]
license = "Apache-2.0"
repository = "https://github.com/betcode/betcode"
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.14.3"
tonic-build = "0.14.3"
tonic-prost-build = "0.14.3"
tonic-prost = "0.14.3"
tonic-health = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.13.1", default-features = false, features = [
  "rustls-no-provider",
  "json",
  "charset",
  "http2",
  "system-proxy",
] }

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Interactive prompts
dialoguer = "0.12"
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.31", features = ["user"] }
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"

# systemd integration
sd-notify = "0.4"

# Versioning
semver = "1"

# Command system
nucleo-matcher = "0.3"
regex = "1"
tempfile = "3"
toml = "0.8"
notify = "7"

# Pre-commit hooks
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }

# Internal crates
betcode-proto = { path = "crates/betcode-proto" }
betcode-core = { path = "crates/betcode-core" }
betcode-crypto = { path = "crates/betcode-crypto" }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
# Enable strict groups as warn (priority -1 so individual overrides work)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Deny outright bugs and bad patterns
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "deny"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Allow known-noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_docs_in_private_items = "allow"
