[package]
name = "betcode-cli"
description = "BetCode CLI - Terminal UI for interacting with Claude Code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "betcode"
path = "src/main.rs"

[dependencies]
betcode-proto = { workspace = true }
betcode-core = { workspace = true }
betcode-crypto = { workspace = true }
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream = "0.1.18"
tokio-util = { version = "0.7", features = ["rt"] }
thiserror.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
dirs = "6"
unicode-width = "0.2.2"
