[package]
name = "betcode-core"
description = "Core library for BetCode - NDJSON parsing, config, permissions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
metrics = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tracing-opentelemetry",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
nucleo-matcher.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry (optional, enabled by `metrics` feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
cargo-husky.workspace = true
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
