[package]
name = "betcode-crypto"
description = "E2E encryption primitives for BetCode - X25519, ChaCha20-Poly1305, HKDF"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
test-utils = []
certs = ["dep:rcgen"]

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
subtle = "2.6.1"
rcgen = { workspace = true, optional = true }

[lints]
workspace = true
