[package]
name = "betcode-daemon"
description = "BetCode daemon - Claude Code subprocess manager and gRPC server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "betcode-daemon"
path = "src/main.rs"

[dependencies]
betcode-proto = { workspace = true }
betcode-core = { workspace = true }
tokio.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots"] }
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
prost-types.workspace = true
tokio-stream = "0.1.18"
clap = { workspace = true, features = ["derive", "env"] }
dirs = "6"
async-stream = "0.3"
reqwest.workspace = true
libc = "0.2.180"
