[package]
name = "betcode-daemon"
description = "BetCode daemon - Claude Code subprocess manager and gRPC server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "betcode-daemon"
path = "src/main.rs"

[dependencies]
betcode-proto = { workspace = true }
betcode-core = { workspace = true }
betcode-crypto = { workspace = true }
tokio.workspace = true
tonic = { workspace = true, features = ["tls-ring", "tls-native-roots", "tls-webpki-roots"] }
tonic-health.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
prost-types.workspace = true
tokio-stream = "0.1.18"
clap = { workspace = true, features = ["derive", "env"] }
dirs.workspace = true
async-stream = "0.3"
reqwest.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }
libc = "0.2.180"
regex.workspace = true
semver.workspace = true
toml.workspace = true
notify.workspace = true

[dev-dependencies]
betcode-crypto = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
sd-notify = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing-subscriber"]

[lints]
workspace = true
