[package]
name = "betcode-proto"
description = "Generated protobuf code for BetCode gRPC API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

[lints]
workspace = true
