[package]
name = "betcode-setup"
description = "BetCode deployment setup tool — interactive CLI for relay provisioning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "betcode-setup"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
betcode-crypto = { workspace = true, features = ["certs"] }
clap = { workspace = true, features = ["derive"] }
dialoguer.workspace = true
dirs.workspace = true
nix = { workspace = true, features = ["user"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["releases"]
releases = []

[lints]
workspace = true
